--- a/main.html
+++ b/main.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>My Developer Motivation</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <h1>Why I want to become a developer?</h1>
+
+  <p>
+    I want to become a software developer because I have always been fascinated by how technology works and how it can solve real-world problems. I enjoy creating things and seeing my ideas come to life through code. Software development allows me to be creative, think logically, and continuously learn new things. I believe this field gives me the opportunity to build useful tools that can make a difference in people's lives and improve the way we interact with the world around us.
+  </p>
 
 </body>
-
 </html>
